---
source: src/tree.rs
expression: dot
---
digraph g {
	page_1:4 -> page_2:head;
	page_2 [shape=record, label="<head>Level 1|<1>·|1|<2>·|2|<high_page>·"]
	page_2:high_page -> page_3:head [fontcolor=red color=red label="high page"];

	page_3 [shape=record, label="<head>Level 0|<3>·|3"]

	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 2|<4>·|4|<high_page>·"]
	page_1:high_page -> page_4:head [fontcolor=red color=red label="high page"];

	page_4 [shape=record, label="<head>Level 0|<5>·|5"]

}

